fix spacing on saved search bar

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,17 +1,24 @@
+
+
+
 .background  {
   background-image: url("../images/theatre-wallpaper.png");
 }
 
 .marquee {
   background-image: url("../images/marquee.png");
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  background-position: 80%;
+
 }
 
-.intro  {
-  padding-left: 40px;
+.saved-search {
+  margin-top: 20px;
+  margin-bottom: 60px;
 }
-
-/* main {
-  width: auto;
-  height: auto;
-} */
 
